# oresat-adcs-software

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  _BACKUP_2433.gitignore  _BASE_2433.gitignore  _LOCAL_2433.gitignore  _REMOTE_2433.gitignore  org.OreSat.ADCS.conf  pyproject.toml  requirements.txt  setup.py  tests_requirements.txt
adcs_42_interface/: main.py  rx_daemon.py  test_dbus.py  tester.py  visualization_interface.py
adcs_42_interface/42Rx/: 42
adcs_lib/: controller.py  dbus_server.py  dynamic.py  environment.py  frame.py  jday.py  manager.py  observer.py  quaternion.py  sensor.py  simulator.py  structure.py  test.py
adcs_library/: controller.py  dynamic.py  manager.py  observer.py  quaternion.py
adcs_manager/: __init__.py  adcs_lib_test.py  analyze_filter_data.py  board_data.py  daemon.py  dbus_server.py  kalman_states.csv  main.py  manager.py  state_machine.py  true_states.csv
adcs_manager/adcs_lib/: controller.py  dynamic.py  environment.py  foo.py  frame.py  jday.py  manager.py  manager_class.py  observer.py  quaternion.py  sensor.py  simulator.py  state_machine.py  structure.py  test.py  vector.py
analysis/: README.md
analysis/basilisk/: basilisk_wrapper.py  blah.txt  mag_modular.py  mix_wrapper.py  output.txt  panel.txt  sol_modular.py  sun.csv  test.txt
analysis/eclipsed/: Beacon Data CSV 2024-08-29 10_00 - Beacons.csv  Better IsEclipsed Beacon Data CSV 2024-08-29 10_00 - Beacons.csv  Eclipsed Beacon Data CSV 2024-08-29 10_00 - Beacons.csv  eclipsed.py  get_eclipsed_col.py  get_eclipsed_col_multi.py  get_packet.py  plot_eclipsed_data.py  telemetry.json
analysis/magfield/: .adcs_magfield.py.swp  README.md  adcs_magfield.py  basilisk_mag_WMM.py  basilisk_mag_centered_dipole.py
analysis/orbit/: README.md  TLE_mod.py  basilisk_orbit.py  compare_TLEs.py  get_pos_vel_from_tle.py  get_tle.py  lat_long_test.py  scratch.py
analysis/packets/: README.md  decoded_beacon_cache.json  decoder.py  get_packet.py  (+15 more)
conf_files/: oresat-adcs-managerd.service  org.oresat.adcs-manager.conf
debian/: changelog  control  oresat-linux-updater.install  prerm
docs/: adcs_class_data_flow.drawio  adcs_class_design.drawio  conf.py  index.rst
examples/: .environment_config.json.swp  dynamic_example.py  dynamics_example.py  env_example.py  environment_config.json  environment_example.py  example_globals.json  long_dynamic_example.py  model_config.json  model_example.py  new_environment_example.py  observer_example.py  reorg_example.py  satellite_state_example.py  scratch.py  sensors_example.py  simulator_example.py  simulator_example_2.py  structure_config.json  structure_example.py
simulation/: ADCS_Discrete_State_Space_Calculator.py  ADCS_Simulation_Basilisk.py  FlightSoftwareModule.py  OreSat_Simplified_Model.mtl  Quaternions.py  Stability Analysis.py
src/: adcs_daemon.py  adcs_data_structures.h  adcs_data_structures.py  adcs_dbus_bindings.xml  adcs_dbus_server.cpp  adcs_dbus_server.h  adcs_dbus_server_glue.h  control_backend.py  controller.cpp  controller.h  controller.py  dbus_adaptor.py  dbus_server.py  dynamic_model.py  geometry.py  magnetorquer.cpp  magnetorquer.h  magnetorquer.py  magnetorquer_controller.py  main.cpp  main.py  make_dbus_files.sh  reaction_wheels.cpp  reaction_wheels.h  reaction_wheels.py  reaction_wheels_controller.py  state_machine.cpp  state_machine.h  state_machine.py  system_definition.py  test_main.py
test/: adcs_data_generator.py  print_adcs_data_properties.py  print_adcs_data_signals.py
tests/: adcs_lib_test.py  analyze_filter_data.py  assert_generic_frame.py  dynamic_test.py  environment_test.py  example-structure-config.json  import_test.py  jday_test.py  sensors_test.py  simulation_test.py  structure_test.py
(+89 files in other folders)
